20000207-09:15 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.prg
     * Mouse support to select any window.
     * Improved command window GET building.

20000207-00:25 GMT+1 Victor Szakats <info@szelvesz.hu>
   * source/vm/cmdarg.c
     * Format of build info slightly modified.
     + Added maximum symbol length to build info.
   * source/rtl/mouse/mousedos.c
     ! Several fixes.
     ! Formatting.
     % Some variables optimized out.
     * Mousereg renamed to regs.
   * Makefile
     ! Formatting fix.
   * ngdoc/Makefile
     ! Fixed.
   * ngdoc/bldfthe.bat
     ngdoc/ft_helpc.prg
     ! NANFOR is always defined if __HARBOUR__, so that it now links OK with
       the GNU make system. Explicit /DNANFOR switch removed from the Borland
       make .BAT file.

20000206-20:35 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
    *Makefile
        *Added ngdoc dir to the normal build
    +ngdoc/makefile
        +gnu make file for ft_helpc
    *ngdoc/ft_helpc.pg
        *small changes
    *source/rdd/dbcmd.c
         * Change some functions docs
    *source/rtl/mouse/mousedos.c
        * Added support for djgpp compiler
    *source/tools/html.prg
        *small changes

20000206-16:55 GMT+1 Victor Szakats <info@szelvesz.hu>
   * source/vm/cmdarg.c
     ! Mistyped #ifdef fixed in //BUILD functionality (mentioned by Jose)

20000206-16:15 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/vm/hvm.c
        * fixed GPF/code dump during creation of a codeblock if used
          for static variable initialization

    *source/compiler/harbour.y
        * fixed generation of line number opcodes

    *source/compiler/harbour.c
	* fixed 'unused variable' warnings generated by Borland compiler

    *doc/compiler.txt
        * added note about incompatibility with Clipper in handling of
          local variables during static variable initialization

20000206-10:12 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.prg