@@ -659,6 +659,35 @@ FUNCTION Main_HVM()
    TEST_LINE( Str( 4 % 2.0 )                  , "         0.00"                    )
    TEST_LINE( Str( 2 % 4.0 )                  , "         2.00"                    )
 
+   TEST_LINE( Str(  3 %  3 )                   , "         0"                      )
+   TEST_LINE( Str(  3 %  2 )                   , "         1"                      )
+   TEST_LINE( Str(  3 %  1 )                   , "         0"                      )
+   TEST_LINE( Str(  3 %  0 )                   , "E BASE 1341 Zero divisor % F:S"  )
+   TEST_LINE( Str(  3 % -1 )                   , "         0"                      )
+   TEST_LINE( Str(  3 % -2 )                   , "         1"                      )
+   TEST_LINE( Str(  3 % -3 )                   , "         0"                      )
+   TEST_LINE( Str( -3 %  3 )                   , "         0"                      )
+   TEST_LINE( Str( -3 %  2 )                   , "        -1"                      )
+   TEST_LINE( Str( -3 %  1 )                   , "         0"                      )
+   TEST_LINE( Str( -3 %  0 )                   , "E BASE 1341 Zero divisor % F:S"  )
+   TEST_LINE( Str( -3 % -1 )                   , "         0"                      )
+   TEST_LINE( Str( -3 % -2 )                   , "        -1"                      )
+   TEST_LINE( Str( -3 % -3 )                   , "         0"                      )
+   TEST_LINE( Str(  3 %  3 )                   , "         0"                      )
+   TEST_LINE( Str(  2 %  3 )                   , "         2"                      )
+   TEST_LINE( Str(  1 %  3 )                   , "         1"                      )
+   TEST_LINE( Str(  0 %  3 )                   , "         0"                      )
+   TEST_LINE( Str( -1 %  3 )                   , "        -1"                      )
+   TEST_LINE( Str( -2 %  3 )                   , "        -2"                      )
+   TEST_LINE( Str( -3 %  3 )                   , "         0"                      )
+   TEST_LINE( Str(  3 % -3 )                   , "         0"                      )
+   TEST_LINE( Str(  2 % -3 )                   , "         2"                      )
+   TEST_LINE( Str(  1 % -3 )                   , "         1"                      )
+   TEST_LINE( Str(  0 % -3 )                   , "         0"                      )
+   TEST_LINE( Str( -1 % -3 )                   , "        -1"                      )
+   TEST_LINE( Str( -2 % -3 )                   , "        -2"                      )
+   TEST_LINE( Str( -3 % -3 )                   , "         0"                      )
+
    /* The order of these tests is relevant, don't change it */
 
    nA := 1
