@@ -425,4 +425,52 @@ FUNCTION Main_MATH()
    TEST_LINE( Str(sdDate - sdDate         )   , "         0"                   )
    TEST_LINE( Str(1234567890 * 1234567890 )   , " 1524157875019052100"         ) /* Bug in CA-Cl*pper, it returns: " 1524157875019052000" */
 
+   /* MOD() */
+
+   TEST_LINE( MOD()                           , "E BASE 1085 Argument error % F:S" )
+   TEST_LINE( MOD( "A", "B" )                 , "E BASE 1085 Argument error % F:S" )
+   TEST_LINE( MOD( "A", 100 )                 , "E BASE 1085 Argument error % F:S" )
+   TEST_LINE( MOD( 100, "B" )                 , "E BASE 1085 Argument error % F:S" )
+   TEST_LINE( MOD( NIL, NIL )                 , "E BASE 1085 Argument error % F:S" )
+   TEST_LINE( MOD( 100, 60, "A" )             , 40.00                              )
+
+   TEST_LINE( MOD( 1, 0 )                     , "E BASE 1341 Zero divisor % F:S"   )
+   TEST_LINE( MOD( 1, NIL )                   , "E BASE 1085 Argument error % F:S" )
+   TEST_LINE( Str( MOD( 1, 0   ) )            , "E BASE 1341 Zero divisor % F:S"   )
+   TEST_LINE( Str( MOD( 2, 4   ) )            , "         2.00"                    )
+   TEST_LINE( Str( MOD( 4, 2   ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD( 4, 2.0 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD( 2, 4.0 ) )            , "         2.00"                    )
+   TEST_LINE( Str( MOD( 8, 3   ) )            , "         2.00"                    )
+
+   TEST_LINE( Str( MOD(  3,  3 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD(  3,  2 ) )            , "         1.00"                    )
+   TEST_LINE( Str( MOD(  3,  1 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD(  3,  0 ) )            , "E BASE 1341 Zero divisor % F:S"   )
+   TEST_LINE( Str( MOD(  3, -1 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD(  3, -2 ) )            , "        -1.00"                    )
+   TEST_LINE( Str( MOD(  3, -3 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD( -3,  3 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD( -3,  2 ) )            , "         1.00"                    )
+   TEST_LINE( Str( MOD( -3,  1 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD( -3,  0 ) )            , "E BASE 1341 Zero divisor % F:S"   )
+   TEST_LINE( Str( MOD( -3, -1 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD( -3, -2 ) )            , "        -1.00"                    )
+   TEST_LINE( Str( MOD( -3, -3 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD(  3,  3 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD(  2,  3 ) )            , "         2.00"                    )
+   TEST_LINE( Str( MOD(  1,  3 ) )            , "         1.00"                    )
+   TEST_LINE( Str( MOD(  0,  3 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD( -1,  3 ) )            , "         2.00"                    )
+   TEST_LINE( Str( MOD( -2,  3 ) )            , "         1.00"                    )
+   TEST_LINE( Str( MOD( -3,  3 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD(  3, -3 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD(  2, -3 ) )            , "        -1.00"                    )
+   TEST_LINE( Str( MOD(  1, -3 ) )            , "        -2.00"                    )
+   TEST_LINE( Str( MOD(  0, -3 ) )            , "         0.00"                    )
+   TEST_LINE( Str( MOD( -1, -3 ) )            , "        -1.00"                    )
+   TEST_LINE( Str( MOD( -2, -3 ) )            , "        -2.00"                    )
+   TEST_LINE( Str( MOD( -3, -3 ) )            , "         0.00"                    )
+
    RETURN NIL
+
